Re-Fixed Z-Index for webcomics cover on homepage

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -564,7 +564,7 @@ section.section-webcomics .webcomics-image-hover {
   top: 0;
   width: 100%;
   height: 200px;
-  z-index: 5;
+  z-index: 2;
   background: url("../images/DottedOverlay.svg");
   opacity: 0; }
 
